eks/demo/.cache/manifests/manifests-7a373809a663ded140f9b70a3e879a39f6e88479/knative/knative-serving-install/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    serving.knative.dev/release: "v0.8.0"
  name: knative-serving
